--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 <div class="paper">
 <p class="p1">Drag the papers to move!</p>
 </div>
-<div class="container">
+<!-- <div class="container">
     <a href="#" class="button button--piyo">
         <div class="button__wrapper">
             <span class="button__text"></span>
@@ -67,7 +67,7 @@
             </div>
         </div>
     </a>
-</div>
+</div> -->
 
 <div class="container">
     <P href="">I want to tell you something, <a href="images/more.html">Click here !</a> </P>
